argocd/app-configs/windmill/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: windmill-auth
  namespace: windmill
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: windmill
  namespace: windmill
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`windmill.fzymgc.house`)
      kind: Rule
      services:
        - name: windmill-app
          port: 8000
    - match: Host(`windmill.k8s.fzymgc.house`)
      kind: Rule
      services:
        - name: windmill-app
          port: 8000
  tls:
    secretName: windmill-tls
